[build-system]
requires = ["pandas==2.0.1",
			"numpy==1.24.3",
			"netCDF4==1.6.3",
			"jupyter==1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test1_xcodex"
version = "0.0.1"
authors = [
  {name="Henrique Fontellas Laurito", email="henrique.f.laurito@unesp.br" },
    {name="Glauco de Souza Rolim", email="glauco.rolim@unesp.br"}
]
description = "This package will extract daily data from netCDF4 files downloaded at GES DISC database"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    	"Intended Audience :: Developers",
    	"License :: OSI Approved :: MIT License",
    	"Programming Language :: Python :: 3.11",
    	"Operating System :: Unix",
    	"Operating System :: MacOS :: MacOS X",
    	"Operating System :: Microsoft :: Windows"]

[project.urls]
"Homepage" = "https://github.com/henriquefl24/xcodex"
"Bug Tracker" = "https://github.com/henriquefl24/xcodex/issues"